edit pom dependencies